ms-app/templates/hello-ms-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ms-service
  labels:
    app: hello-ms
spec:
  selector:
    app: hello-ms
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
  type: ClusterIP
