ms-app/templates/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
    - http:
        paths:
          - path: /argocd  # Define the desired path
            pathType: Prefix
            backend:
              service:
                name: argocd-server  # Name of your ArgoCD service
                port:
                  number: 8080  # The port ArgoCD is listening on
