ms-app/templates/ms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ms-ingress
spec:
  rules:
    - http:
        paths:
          - path: /hello-ms
            pathType: Prefix
            backend:
              service:
                name: hello-ms-service  # Name of your hello service
                port:
                  number: 9000  # The port hello-ms is listening on
